# bed-bpp-env

./: .gitattributes  .gitignore  LICENSE  README.md  activate_venv.sh  gitignore  pyproject.toml  requirements.txt
.github/: pull_request_template.md
alexfrom0815_O3D-BPP-PCT/: activate_O3DBPP-PTC_venv.sh  readme_Online-3D-BPP-PCT_integration.md  requirements_pct.txt  run_evaluation.sh
alexfrom0815_O3D-BPP-PCT/Online-3D-BPP-PCT-main/: attention_model.py  evaluation.py  evaluation_tools.py  givenData.py  requirements.txt  tools.py
assets/packing_plans/: 2022-11-25_kagerer_o3dbpp-pct_O3dbp.json  (+3 more)
code/: bed-bpp_env.conf  demo_gym_palenv.py  run_heuristic_O3DBP_3_2.py  run_your_solver.py  script_evaluate_packing_plan.py  script_visualize_packing_plan.py
code/environment/: Item3D.py  (+6 more)
example_data/: 5_bed-bpp.json  packing_plan_5-bed-bpp.json
hschneid_xflp/: createSolutionsWithSolver.sh  readme_xflp_integration.md
josch_sisyphus/: createSolutionsWithSisyphus.sh  readme_sisyphus_integration.md
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  asBuilt.lo  autogen.sh  ax_check_gl.m4  ax_check_glu.m4  ax_check_glut.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libpallet.la  libpallet.lo  libtool  packlist.lo  palletViewer.lo  response.lo  scoreAsPlannedClasses.lo  scoreAsPlannedLex.lo  scoreAsPlannedYACC.lo  truckViewer  xml_parser.lo
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/.deps/: asBuilt.Plo  libpallet.Plo  packlist.Plo  palletViewer.Plo  response.Plo  scoreAsPlannedClasses.Plo  scoreAsPlannedLex.Plo  scoreAsPlannedYACC.Plo  truckViewer-PalletizingDataTypesClasses.Po  truckViewer-TruckLoadingJobClasses.Po  truckViewer-TruckLoadingJobLex.Po  truckViewer-TruckLoadingJobYACC.Po  truckViewer-TruckLoadingPlanClasses.Po  truckViewer-TruckLoadingPlanLex.Po  truckViewer-TruckLoadingPlanYACC.Po  truckViewer-mouse.Po  truckViewer-truckViewer.Po  truckViewer-view.Po  truckViewer-xmlSchemaInstance.Po  xml_parser.Plo
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/.libs/: libpallet.la  libpallet.lai  libpallet.so.0  libpallet.so.0.0.0
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/SampleData/: Food001_1Order.xml  Food001_1Packlist.xml  truckLoadingJob1.xml  truckLoadingPlan1.xml
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/Schema/: Article.xsd  Error.xsd  OffLineMessage.xsd  OffLineResponse.xsd  PalletInit.xsd  Point.xsd  Restrictions.xsd
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/palletView/: asBuilt.cc  asBuilt.h  libpallet.cc  main.cc  mouse.hh  packlist.cc  packlist.h  palletViewer.cc  palletViewer.h  response.cc  response.h  scoreAsPlannedClasses.cc  scoreAsPlannedClasses.hh  scoreAsPlannedLex.cc  scoreAsPlannedYACC.cc  scoreAsPlannedYACC.hh  view.cc  xml_parser.cc  xml_parser.h
josch_sisyphus/sisyphus-master/palletandtruckviewer-3.0/truckView/: PalletizingDataTypesClasses.cc  PalletizingDataTypesClasses.hh  TruckLoadingJobClasses.cc  TruckLoadingJobClasses.hh  TruckLoadingJobLex.cc  TruckLoadingJobYACC.cc  TruckLoadingJobYACC.hh  TruckLoadingPlanClasses.cc  TruckLoadingPlanClasses.hh  TruckLoadingPlanLex.cc  TruckLoadingPlanYACC.cc  TruckLoadingPlanYACC.hh  mouse.cc  truckViewer.cc  truckViewer.h  view.cc  view.h  xmlSchemaInstance.cc  xmlSchemaInstance.hh
(+175 files in other folders)
