[project]
name = "bed-bpp-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian Enzenhofer"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.0.0,<2.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pdoc3 (>=0.11.6,<0.12.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "vtk (>=9.5.2,<10.0.0)",
    "gymnasium (>=1.2.1,<2.0.0)"
]

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
