AC_INIT(palletAndTruckViewer, 3.0)
AC_CONFIG_SRCDIR(./palletView/palletViewer.cc)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(./config.h)

# Checks for programs.
AC_PROG_CXX

LT_INIT

# Checks for header files.
AC_HEADER_STDC

# Check for X Windows.
AC_PATH_XTRA

# Checks for Glut toolkit.
AX_CHECK_GLUT

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

